# Django_vod_insta

./: db.sqlite3  db.sqlite3-journal  pyproject.toml
config/: settings.py  urls.py
member/: forms.py  models.py  urls.py  views.py
member/migrations/: 0001_initial.py  0002_userfollowing_user_following.py
post/: admin.py  comment_urls.py  comment_views.py  forms.py  models.py  views.py
post/migrations/: 0001_initial.py  0002_alter_postimage_post_comment_tag.py  0003_like.py
post/templatetags/: custom_tag.py
static/css/: style.css
templates/: base.html
templates/auth/: email_verified_done.html  login.html  not_verified.html  signup.html  signup_done.html
templates/include/: form.html
templates/post/: form.html  list.html
templates/profile/: detail.html
utils/: email.py  forms.py  models.py
