[tool.poetry]
name = "pystagram"
version = "0.1.0"
description = ""
authors = ["chdan-hub <ksmii358@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.6"
django-extensions = "^4.1"
ipython = "^9.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
